[package]
name = "dns-iterate"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "crates/mycelnet-dns-protocol",
]

[[bin]]
name = "dns-iterate"
path = "src/main.rs"

[lib]
name = "cli"
path = "src/lib/cli.rs"


[dependencies]
mycelnet-dns-protocol = { path = "crates/mycelnet-dns-protocol" }

clap = { version = "4.4.6", features = ["derive", "env", "cargo"] }
anyhow = {version = "1.0.75", features = ["backtrace"] }
structured-logger = "1.0.3"
log = "0.4.14"

tokio = { version = "1.33.0", features = ["full"] }
